[package]
name = "slog-syslog"
version = "0.12.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>", "William Laeder <codylaeder@gmail.com" ]
description = "Syslog drain for slog-rs"
keywords = ["slog", "logging", "json", "log", "syslog"]
license = "MPL-2.0"
documentation = "https://docs.rs/slog-rs/term"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/syslog"
readme = "README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = "2.2.3"
syslog = { git = "https://github.com/valarauca/rust-syslog", branch = "valarauca/forking_from_working_state" }
nix = "0.9.0"
